Add a login screen using ParseLoginUI

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,5 +2,8 @@
 <resources>
 
     <string name="app_name">MAF App</string>
+    <string name="action_logout">Log Out</string>
+    <string name="parse_signup_button_text">Create Account</string>
+    <string name="parse_login_button_text">Log In</string>
 
 </resources>
