--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -35,5 +35,12 @@
     <string name="label_btn_cancel">Cancel</string>
     <string name="label_btn_create_goal">Create Goal</string>
     <string name="label_btn_goal_payment">Make Payment</string>
-    
+    <string name="title_add_transaction">Add Transaction</string>
+    <string name="title_activity_add_transaction">Add Transaction</string>
+    <string name="label_add_transaction_btn">Add Transaction</string>
+    <string name="label_transaction_name">Transaction Name</string>
+    <string name="label_category">Category</string>
+    <string name="label_transaction_amount">Amount</string>
+    <string name="label_transaction_date">Date</string>
+
 </resources>
