--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,11 +12,12 @@
     <string name="sample_remaining_amount">$234.64</string>
     <string name="sample_spent_today">$42.00</string>
     <string name="sample_goal_title">Lending Circle Bill</string>
+    <string name="sample_goal_name">Lending Circle</string>
     <string name="label_payment">Total Payment of</string>
     <string name="sample_total_payment">$35.00</string>
     <string name="label_due_date">Due On</string>
     <string name="sample_due_date">JUL 25</string>
-    <string name="sample_due_date_human">2 DAYS FROM NOW</string>
+    <string name="sample_due_date_human">DUE IN 2 DAYS</string>
     <string name="label_receive">You will receive</string>
     <string name="sample_payment_number">payment 5 of 10</string>
     <string name="nothing"></string>
