--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="label_transaction_amount">Amount</string>
     <string name="label_transaction_date">Date</string>
     <string name="parse_error_saving">Oops! something is wrong saving. Try again&#8230;</string>
+    <string name="parse_error_querying">Oops! something is wrong reading data.</string>
     <string name="parse_success_transaction_save">Transaction saved!</string>
     <string name="toast_done_saving_goal">Done saving goal.</string>
     <string name="error_parse_date">date parsing issue</string>
