Add improvements to Liquid Assets screen

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,9 +5,9 @@
     <string name="title_add_goal">Add Goal</string>
     <string name="title_liquid_asset">Liquid Assets</string>
     <string name="title_goal_details">Goals</string>
-    <string name="label_remaining">Remaining</string>
+    <string name="label_liquid_assets">LIQUID ASSETS</string>
     <string name="label_spent_today">SPENT TODAY</string>
-    <string name="label_spent_this_week">Spent this week</string>
+    <string name="label_spent_this_week">SPENT THIS WEEK</string>
     <string name="sample_avg_per_day">AVG $5.62 PER DAY</string>
     <string name="sample_remaining_amount">$234.64</string>
     <string name="sample_spent_today">$42.00</string>
