Add new goal activity

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -67,5 +67,6 @@
     <string name="label_transaction_type">Type</string>
     <string name="label_income">Income</string>
     <string name="label_expense">Expense</string>
+    <string name="title_activity_new_goal">New Goal</string>
 
 </resources>
