--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -47,6 +47,10 @@
     <string name="label_income">Income</string>
     <string name="label_expense">Expense</string>
     <string name="title_activity_new_goal">New Goal</string>
+    <string name="goal_due_date_today">DUE IN TODAY</string>
+    <string name="goal_due_date_tomorrow">DUE IN TOMORROW</string>
+    <string name="goal_due_date_days">DUE IN %1$d DAYS</string>
+    <string name="goal_due_date">DUE %1$s</string>
     
     <!-- App notifications -->
     <string name="parse_success_user_save">User profile updated!</string>
