--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -78,7 +78,7 @@
     <string name="sample_goal_frequency">Monthly</string>
     <string name="sample_due_date">JUL 25</string>
     <string name="sample_due_date_human">DUE IN 2 DAYS</string>
-    <string name="sample_new_goal_name">Vegas Trip</string>
+    <string name="sample_new_goal_name">Vacation</string>
 
     <!-- Parse -->
     <string name="com_parse_ui_logo_content_description">Logo</string>
