--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -51,6 +51,10 @@
     <string name="goal_due_date_tomorrow">DUE IN TOMORROW</string>
     <string name="goal_due_date_days">DUE IN %1$d DAYS</string>
     <string name="goal_due_date">DUE %1$s</string>
+	<string name="goal_due_date_custom_format">&#160; %1$s (%2$s) </string>
+	<string name="label_goal_payments_made"> %1$d OF %2$d PAYMENTS MADE</string>
+	
+    
 	    
     
     <!-- App notifications -->
