--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -72,6 +72,9 @@
     <string name="initial_setup_transaction_name">Initial Setup</string>
     <string name="initial_setup_toast_successful_message">Account successfully setup.</string>
     <string name="initial_setup_category_bills_object_id">93BaEoZPfo</string>
+    
+    <!-- Add Goal Payment -->
+    <string name="add_goal_payment_transaction_name">\'%1$s\' goal payment</string>
 
     <!-- App notifications -->
     <string name="parse_success_user_save">User profile updated!</string>
