--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -88,7 +88,7 @@
     <string name="toast_done_saving_goal">Done saving goal.</string>
     <string name="error_amount_require">Oops! No amount added</string>
     <string name="error_name_require">Oops! No name added</string>
-    <string name="error_category_require">Oops! No category selected</string>
+    <string name="error_category_require">Oops! No category selected</string>Error getting goal
 
     <!-- sample strings -->
     <string name="sample_avg_per_day">AVG $5.62 PER DAY</string>
