--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -65,7 +65,11 @@
     <string name="dashboard_goal_item_due_date_tomorrow">due in tomorrow</string>
     <string name="dashboard_goal_item_due_date_days">due in %1$d days</string>
     <string name="dashboard_goal_item_due_date">due %1$s</string>
-    <string name="dashboard_milestones_left_human">%1$d milestones left</string>
+    <plurals name="dashboard_milestones_left_human">
+        <item quantity="zero">No payments left</item>
+        <item quantity="one">%d payment left</item>
+        <item quantity="other">%d payments left</item>
+    </plurals>
 
     <!-- Initial Setup -->
     <string name="initial_setup_title">Enter Current Cash balance</string>
