Add SavedToday data into dashboard

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="dashboard_title">Dashboard</string>
     <string name="dashboard_total_cash_label">TOTAL CASH</string>
     <string name="dashboard_monthly_goals_label">MONTHLY GOALS</string>
+    <string name="dashboard_saved_today_label">SAVED TODAY</string>
     <string name="dashboard_spent_today_label">SPENT TODAY</string>
     <string name="dashboard_goal_item_due_date_today">due in today</string>
     <string name="dashboard_goal_item_due_date_tomorrow">due in tomorrow</string>
