--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="goal_due_date_custom_format">&#160; %1$s (%2$s) </string>
     <string name="label_goal_payments_made"> %1$d OF %2$d PAYMENTS MADE</string>
     <string name="label_saved_to_date"> %1$s SAVED TO DATE</string>
+    <string name="label_lending_circle_payment"> LENDING CIRCLE PAYMENT</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="label_post"> post </string>
